# Vspec-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  qwen3_8b_ir.json  qwen3_8b_ir_full.json  sample.safetensors  sample_weights.vpt  vspec-benchmark.cmd  vspec-benchmark.ps1  vspec-chat-prototype.cmd  vspec-chat.cmd  vspec-chat.ps1  vspec-convert.cmd  vspec-convert.ps1  vspec-info.cmd  vspec-info.ps1  vspec-run.cmd  vspec-run.ps1  vspec-server.cmd  vspec-server.ps1
Vspec-chat/: README.md
Vspec-chat/c/: vspec_chat.c
Vspec-chat/python/: chat_prompt.py  decode_contract.py  decode_optimization_module.py  decode_phase1_contract.py  decode_phase2_prefill.py  decode_phase3_step_dispatch.py  decode_phase4_sampler.py  decode_phase5_daemon.py  fast_output.py  generation_batch_driver.py  language_stability_guard.py  language_structure_guard.py  lowbit_policy.py  meaningful_output_guard.py  model_adapters.py  model_loader.py  native_safe_decode.py  requirements.txt  runtime_baseline_manager.py  runtime_core_bridge.py  runtime_inference.py  runtime_lowbit_module.py  runtime_meaningful_response.py  runtime_threebit_module.py  semantic_rescue.py  vspec_chat.py  vspec_chat_session.py  vspec_cuda_bridge.py
Vspec-chat/python/gguf_support/: __init__.py  archive.py
Vspec-chat/python/runtime_compat/: __init__.py  architecture.py  profiles.py  quant_source.py
config/: runtime_hardware.conf
docs/: ABI.md  CLIENT_RUNTIME_INTEGRATION.md  OPTIMIZATION.md  PHASE3.md
examples/: adaptive_plugin_demo.c  adaptive_runtime_demo.c  attention_demo.c  attention_v2_demo.c  compat_demo.c  cuda_fused_demo.c  graph_ir_demo.c  int4_demo.c  memory_pool_demo.c  missing_features_demo.c  optimizer_demo.c  phase2_demo.c  phase3_demo.c  python_torch_like_demo.py  quant_pack_demo.c  special_quant_demo.c  torch_compat_demo.c
include/vspec/: version.h
include/vspec/attention/: attention.h  flash_block.h  flash_stub.h  fused_graph.h  kv_cache.h  kv_paged_cache.h  kv_ring.h  rotary.h  sparse.h  streaming.h
include/vspec/compat/: graph_rewrite.h  pytorch_loader.h  safetensors_parser.h  types.h  weight_mapper.h
include/vspec/core/: tensor.h  tensor_meta.h
include/vspec/graph/: ir.h  optimizer.h
include/vspec/kernel/: backend.h  context.h  cuda_fused.h  cuda_ops.h  cuda_ultimate.h
include/vspec/memory/: activation_reuse.h  arena_allocator.h  block_pool.h  kv_arena.h  memory_metrics.h  pool.h  vram_scheduler.h
include/vspec/model/: qwen_ops.h
include/vspec/parallel/: multi_gpu.h
include/vspec/python/: capi.h
include/vspec/quant/: dynamic_map.h  int3.h  int4.h  pack.h  quant.h
include/vspec/runtime/: adaptive_precision_engine.h  continuous_batch.h  decode_session.h  error_estimator.h  hw_performance_manager.h  language_structure_guard.h  mixed_bit.h  mixed_bit_policy.h  mixed_bit_runtime.h  native_inference.h  native_model_registry.h  neuron_router.h  runtime.h  (+9 more)
logs/: baseline_run.txt  pyver.txt  vspec_cuda_fix_check.txt  vspec_run.txt
src/attention/: attention_ref.c  flash_block.c  flash_stub.c  fused_graph.c  kv_cache.c  kv_paged_cache.c  kv_ring.c  rotary.c  sparse.c  streaming.c
src/compat/: graph_rewrite.c  pytorch_loader.c  safetensors_parser.c  types.c  weight_mapper.c
src/core/: tensor.c  tensor_meta.c
src/graph/: ir.c  optimizer.c
src/kernel/: backend_registry.c
src/memory/: activation_reuse.c  arena_allocator.c  block_pool.c  kv_arena.c  memory_metrics.c  pool.c  vram_scheduler.c
src/model/: qwen_ops.c
src/parallel/: multi_gpu.c
src/python/: capi.c  cuda_bridge.c
src/quant/: dynamic_map.c  int3.c  int4.c  pack.c  quant.c
src/runtime/: adaptive_precision_engine.c  continuous_batch.c  decode_session.c  error_estimator.c  hw_performance_manager.c  language_structure_guard.c  mixed_bit.c  mixed_bit_policy.c  mixed_bit_runtime.c  native_inference.c  native_model_registry.c  neuron_router.c  output_guard.c  pattern_cache.c  precision_wave.c  qlora_adapter.c  runtime.c  runtime_behavior_monitor.c  sampling_core.c  three_bit_runtime_modules.c  torch_compat_module.c  ultimate_optimizer.c
src/scheduler/: dynamic.c  request_scheduler.c
src/validation/: baseline_compare.c  drift_analyzer.c  perplexity.c  quant_sensitivity.c
tools/benchmark/: adaptive_profile_benchmark.c  anf_job59_ab.py  anf_phase_a_laneA.c  anf_phase_a_laneA_split_timing.c  anf_phase_a_off_shadow.c  anf_phase_b_cuda_laneB.c  anf_phase_b_laneB.c  anf_phase_b_tcc_smoke.c  anf_phase_c_cascade_smoke.c  anf_phase_c_laneC.c  anf_phase_d_cuda_graph_smoke.py  anf_phase_d_dashboard.py  anf_phase_d_gate.py  anf_phase_d_rollback_smoke.c  anf_phase_d_soak_1000.c  anf_router_smoke.c  benchmark_round.py  benchmark_suite.c  continuous_batch_benchmark.c  cuda_fused_linear_benchmark.c  custom_bench.py  hardware_telemetry.py  job1_phase3_eval.py  job2_quality_eval.py  job3_int3_storage_compute_benchmark.c  job3_long_context_eval.py  job62_phase0_baseline.py  job62_phase4_runtime_check.py  make_sample_logs.py  qlora_manifest_smoke.c  qwen3_report.json  runtime_request_scheduler_benchmark.c  stress_test.c  ultimate_quality_benchmark.c  unified_runtime_benchmark.c  week23_decode_ab.py  week24_e2e_3bit_kpi.py  week24_quality_gate.py  week25_memory_scheduler_stress.c  week26_quality_perplexity_gate.py  (+2 more)
tools/cli/: vspec_benchmark.py  vspec_cli_common.py  vspec_convert.py  vspec_info.py  vspec_native_chat_bridge.py  vspec_run.py  vspec_runner.py  vspec_server.py  vspec_startup_menu.py
tools/converter/: vspec_converter.py
tools/native/: native_internal_loop_chat.c  native_model_probe.c  native_real_decode.c  native_real_logits.c  native_session_chat.c  native_startup_chat.c
tools/profiler/: kv_paged_cache_profiler.c  memory_profiler.c  memory_v2_demo.c
tools/validation/: attention_kernel_compare_runtime.py  gguf_loader_quant_validation.py  int4_bridge_mode_benchmark.py  int4_kernel_compare_runtime.py  job29_now_validation_suite.c  model_certification.py  quant_validation_demo.c
vspec-python/: README.md  pyproject.toml
vspec-python/src/vspec/: __init__.py  cli.py  runtime_bridge.py  torch_like_api.py
(+37 files in other folders)
