[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vspec"
version = "0.1.0"
description = "Vspec Engine Python bridge (Week 9-10 bootstrap)"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
vspec-convert = "vspec.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
